fixed overflowing elements

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
 #root {
-  width: 100vw;
-  height: 100vh;
-  margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
 
 canvas {
-  position: absolute;
-  inset: 0;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
 }
